@@ -1,26 +1,20 @@
 package com.github.platform.core.gateway.infra.filter;
 
-import brave.Tracing;
+import brave.Span;
+import brave.Tracer;
 import com.alibaba.fastjson2.JSONObject;
 import com.github.platform.core.common.constant.SpringBeanOrderConstant;
-import com.github.platform.core.common.utils.CollectionUtil;
 import com.github.platform.core.common.utils.StringUtils;
 import com.github.platform.core.gateway.infra.constants.SkipHeaderEnum;
 import com.github.platform.core.standard.constant.HeaderConstant;
 import com.github.platform.core.standard.entity.dto.ResultBean;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
 import org.reactivestreams.Publisher;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cloud.gateway.filter.GatewayFilterChain;
 import org.springframework.cloud.gateway.filter.GlobalFilter;
-import org.springframework.cloud.sleuth.CurrentTraceContext;
-import org.springframework.cloud.sleuth.Span;
-import org.springframework.cloud.sleuth.Tracer;
-import org.springframework.cloud.sleuth.instrument.web.WebFluxSleuthOperators;
 import org.springframework.core.Ordered;
 import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.core.io.buffer.DataBufferUtils;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -33,15 +27,8 @@ import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.io.InputStreamReader;
-import java.io.Reader;
 import java.nio.charset.StandardCharsets;
-import java.util.*;
-import java.util.stream.Collectors;
-import java.util.zip.GZIPInputStream;
-
+import java.util.Set;
 /**
  * 链路追踪
  * @author: yxkong
@@ -51,107 +38,133 @@ import java.util.zip.GZIPInputStream;
 @Component
 @Slf4j
 public class GatewayTracingFilter implements GlobalFilter, Ordered {
-    public static final String IGNORE_CONTENT_TYPE = "multipart/form-data";
-    public static final Set<String> EXCLUDE_URI_SET = new HashSet<>(Arrays.asList(
+
+    private static final String IGNORE_CONTENT_TYPE = "multipart/form-data";
+    private static final Set<String> EXCLUDE_URI_SET = Set.of(
             "actuator/health", "html", "css", "js", "png", "gif", "configure",
-            "v2/api-docs", "swagger", "swagger-resources", "csrf", "webjars"));
+            "v2/api-docs", "swagger", "swagger-resources", "csrf", "webjars");
+
     @Autowired
     private Tracer tracer;
-    @Autowired
-    private CurrentTraceContext currentTraceContext;
+
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, GatewayFilterChain chain) {
         ServerHttpRequest request = exchange.getRequest();
-        if (shouldExclude(request)){
+
+        // 检查是否需要排除
+        if (shouldExclude(request)) {
             return chain.filter(exchange);
         }
-        processRequest(exchange,request);
-        String token = exchange.getRequest().getHeaders().getFirst(HeaderConstant.TOKEN);
-        String url = exchange.getRequest().getPath().toString();
-        if (isTracing(request)) {
-            DataBufferFactory dataBufferFactory = exchange.getResponse().bufferFactory();
-            return DataBufferUtils.join(exchange.getRequest().getBody())
-                    .flatMap(dataBuffer -> {
-                        try {
-                            byte[] requestBodyBytes = dataBufferToBytes(dataBuffer);
-                            String requestBody = newString(requestBodyBytes);
-                            putSpan(exchange,"request.body", requestBody);
-                            ServerHttpRequest newRequest = new ServerHttpRequestDecorator(request) {
-                                @Override
-                                public Flux<DataBuffer> getBody() {
-                                    // 在这里对请求体进行传递，如果修改，需要修改header
-                                    DataBuffer buffer = dataBufferFactory.wrap(requestBodyBytes);
-                                    return Flux.just(buffer);
-                                }
-                            };
 
-                            ServerHttpResponse response = exchange.getResponse();
-                            ServerHttpResponse decoratedResponse = new ServerHttpResponseDecorator(response) {
-                                /**
-                                 * 此方法在等调用完转发的接口后才会执行
-                                 * @param body the body content publisher
-                                 * @return
-                                 */
-                                @Override
-                                public Mono<Void> writeWith(Publisher<? extends DataBuffer> body) {
-                                    if (body instanceof Flux) {
-                                        Flux<? extends DataBuffer> fluxBody = (Flux<? extends DataBuffer>) body;
-                                        return super.writeWith(
-                                                fluxBody.buffer().map(dataBuffers -> {
-                                                    DataBuffer joinedBuffer = dataBufferFactory.join(dataBuffers);
-                                                    byte[] contentBytes = dataBufferToBytes(joinedBuffer);
-                                                    String result = newString(requestBodyBytes);
-                                                    // 处理响应结果
-                                                    putResult(exchange,result);
-                                                    //如果对响应结果有改动，需要重新载入
-//                                                    byte[] uppedContent = new String(result.getBytes(), StandardCharsets.UTF_8).getBytes();
-//                                                    response.getHeaders().setContentLength(uppedContent.length);
-                                                    return dataBufferFactory.wrap(contentBytes);
-                                                })
-                                        );
-                                    }
-                                    return super.writeWith(body);
-                                }
-                                @Override
-                                public Mono<Void> writeAndFlushWith(Publisher<? extends Publisher<? extends DataBuffer>> body) {
-                                    return writeWith(Flux.from(body).flatMapSequential(p -> p));
-                                }
-                            };
-                            return chain.filter(exchange.mutate().request(newRequest).response(decoratedResponse).build());
-                        } catch (Exception e) {
-                            log.error("token:{} url:{} 链路追踪异常",token,url,e);
-                        } finally {
-                            DataBufferUtils.release(dataBuffer);
-                        }
-                        //异常以后原路执行
-                        return chain.filter(exchange);
-                    });
+        processRequest(exchange, request);
+
+        // 检查是否需要追踪
+        if (!isTracing(request)) {
+            return chain.filter(exchange);
         }
+
+        String token = request.getHeaders().getFirst(HeaderConstant.TOKEN);
+        String url = request.getPath().toString();
+
+        DataBufferUtils.join(exchange.getRequest().getBody())
+                .flatMap(dataBuffer -> {
+                    try {
+                        byte[] requestBodyBytes = dataBufferToBytes(dataBuffer); // 转换 DataBuffer
+                        String requestBody = newString(requestBodyBytes);
+                        putSpan("request.body", requestBody);
+
+                        ServerHttpRequest newRequest = new ServerHttpRequestDecorator(request) {
+                            @Override
+                            public Flux<DataBuffer> getBody() {
+                                DataBuffer buffer = exchange.getResponse().bufferFactory().wrap(requestBodyBytes);
+                                return Flux.just(buffer);
+                            }
+                        };
+
+                        ServerHttpResponse decoratedResponse = new ServerHttpResponseDecorator(exchange.getResponse()) {
+                            @Override
+                            public Mono<Void> writeWith(Publisher<? extends DataBuffer> body) {
+                                if (body instanceof Flux) {
+                                    Flux<? extends DataBuffer> fluxBody = (Flux<? extends DataBuffer>) body;
+                                    return super.writeWith(
+                                            fluxBody.buffer().map(dataBuffers -> {
+                                                DataBuffer joinedBuffer = exchange.getResponse().bufferFactory().join(dataBuffers);
+                                                byte[] contentBytes = dataBufferToBytes(joinedBuffer);
+                                                String result = newString(contentBytes);
+                                                putResult(result);
+                                                return exchange.getResponse().bufferFactory().wrap(contentBytes);
+                                            })
+                                    );
+                                }
+                                return super.writeWith(body);
+                            }
+
+                            @Override
+                            public Mono<Void> writeAndFlushWith(Publisher<? extends Publisher<? extends DataBuffer>> body) {
+                                return writeWith(Flux.from(body).flatMapSequential(p -> p));
+                            }
+                        };
+
+                        return chain.filter(exchange.mutate().request(newRequest).response(decoratedResponse).build());
+                    } catch (Exception e) {
+                        log.error("token:{} url:{} 链路追踪异常", token, url, e);
+                        return Mono.error(e); // 返回异常
+                    } finally {
+                        DataBufferUtils.release(dataBuffer); // 确保释放资源
+                    }
+                });
         return chain.filter(exchange);
     }
-    protected byte[] dataBufferToBytes(DataBuffer dataBuffer) {
-        byte[] content = new byte[dataBuffer.readableByteCount()];
-        dataBuffer.read(content);
-        //释放掉内存
-        DataBufferUtils.release(dataBuffer);
-        return content;
-    }
-    protected boolean shouldExclude(ServerHttpRequest request) {
+
+    private boolean shouldExclude(ServerHttpRequest request) {
         String url = request.getURI().toString();
         String contentType = request.getHeaders().getFirst("Content-Type");
-        Set<String> excludeSet = EXCLUDE_URI_SET.stream().filter(url::contains).collect(Collectors.toSet());
-        return !excludeSet.isEmpty() || Objects.equals(IGNORE_CONTENT_TYPE, contentType);
+        return EXCLUDE_URI_SET.stream().anyMatch(url::contains)
+                || IGNORE_CONTENT_TYPE.equals(contentType);
     }
 
-    /**
-     * 判断是否需要追踪
-     * @param request
-     * @return
-     */
-    private boolean isTracing(ServerHttpRequest request){
+    private boolean isTracing(ServerHttpRequest request) {
         String contentType = request.getHeaders().getFirst(HttpHeaders.CONTENT_TYPE);
-        return  (HttpMethod.POST.equals(request.getMethod()) || HttpMethod.PUT.equals(request.getMethod()))
-                && (StringUtils.isNotEmpty(contentType) && contentType.contains(HeaderConstant.CONTENT_TYPE_JSON));
+        return (HttpMethod.POST.equals(request.getMethod()) || HttpMethod.PUT.equals(request.getMethod()))
+                && contentType != null && contentType.contains(HeaderConstant.CONTENT_TYPE_JSON);
+    }
+
+    private void processRequest(ServerWebExchange exchange, ServerHttpRequest request) {
+        processRequestHeaders(request.getHeaders());
+        processQueryParameters( request);
+    }
+
+    private void processRequestHeaders( HttpHeaders headers) {
+        headers.entrySet().stream()
+                .filter(entry -> !SkipHeaderEnum.contains(entry.getKey()))
+                .forEach(entry -> putSpan( "request.headers." + entry.getKey(), String.join(",", entry.getValue())));
+    }
+
+    private void processQueryParameters( ServerHttpRequest request) {
+        String queryStr = request.getURI().getQuery();
+        if (StringUtils.isNotEmpty(queryStr)) {
+            putSpan("request.queryString", queryStr);
+        }
+    }
+
+    private void putResult( String result) {
+        try {
+            JSONObject jsonObject = JSONObject.parseObject(result);
+            jsonObject.forEach((key, value) -> {
+                if (ResultBean.isValidKey(key)) {
+                    putSpan("response." + key, value.toString());
+                }
+            });
+        } catch (Exception ignored) {
+            log.debug("Failed to parse response for tracing.");
+        }
+    }
+
+    private void putSpan( String key, String value) {
+        Span currentSpan = tracer.currentSpan();
+        if (currentSpan != null) {
+            currentSpan.tag(key, value);
+        }
     }
     /**
      * 解析contentBytes
@@ -161,96 +174,16 @@ public class GatewayTracingFilter implements GlobalFilter, Ordered {
     private String newString(byte[] contentBytes) {
         return new String(contentBytes, StandardCharsets.UTF_8);
     }
-
-    /**
-     * 解析response
-     * @param response
-     * @param contentBytes
-     * @return
-     */
-    private String parseResponse(ServerHttpResponse response,byte[] contentBytes) {
-        List<String> contentEncodingHeaders = response.getHeaders().get(HttpHeaders.CONTENT_ENCODING);
-        if (CollectionUtil.isNotEmpty(contentEncodingHeaders) && contentEncodingHeaders.contains(HeaderConstant.GZIP)) {
-            try (GZIPInputStream gzipInputStream = new GZIPInputStream(new ByteArrayInputStream(contentBytes),contentBytes.length)) {
-                Reader reader = new InputStreamReader(gzipInputStream, StandardCharsets.UTF_8);
-                return IOUtils.toString(reader);
-            } catch (IOException e) {
-                // Handle the exception if needed
-            }
-        }
-        return new String(contentBytes, StandardCharsets.UTF_8);
+    private byte[] dataBufferToBytes(DataBuffer dataBuffer) {
+        byte[] content = new byte[dataBuffer.readableByteCount()];
+        dataBuffer.read(content);
+        return content;
     }
 
-    /**
-     * 将标准响应体放入到追踪中
-     * @param exchange
-     * @param result
-     */
-    private void putResult(ServerWebExchange exchange,String result){
-        try {
-            JSONObject jsonObject = JSONObject.parseObject(result);
-            if (jsonObject.containsKey(ResultBean.STATUS)){
-                putSpan(exchange,"response.status", jsonObject.getString(ResultBean.STATUS));
-            }
-            if (jsonObject.containsKey(ResultBean.MESSAGE)){
-                putSpan(exchange,"response.message", jsonObject.getString(ResultBean.MESSAGE));
-            }
-            if (jsonObject.containsKey(ResultBean.TIMESTAMP)){
-                putSpan(exchange,"response.timestamp", jsonObject.getString(ResultBean.TIMESTAMP));
-            }
-            if (jsonObject.containsKey(ResultBean.DATA)){
-                putSpan(exchange,"response.data", jsonObject.getString(ResultBean.DATA));
-            }
-        } catch (Exception e) {
-        }
-    }
-    protected void putSpan(ServerWebExchange exchange,String key, String value) {
-        // 不为空
-        Optional<Span> currentSpan = Optional.ofNullable(tracer.currentSpan());
-        currentSpan.ifPresent(span -> span.tag(key, value));
-
-        /**
-         *
-         */
-        if (!currentSpan.isPresent()) {
-            WebFluxSleuthOperators.withSpanInScope(tracer, currentTraceContext, exchange, () -> {
-                try {
-                    Tracing.currentTracer().currentSpan().tag(key, value);
-                } catch (Exception e) {
-                }
-            });
-        }
-    }
-    /**
-     * 处理请求
-     * @param request
-     */
-    private void processRequest(ServerWebExchange exchange,ServerHttpRequest request){
-        processRequestHeaders(exchange,request.getHeaders());
-        processQueryParameters(exchange,request);
-    }
-
-    /**
-     * 处理请求头
-     * @param headers
-     */
-    private void processRequestHeaders(ServerWebExchange exchange,HttpHeaders headers) {
-        headers.entrySet().stream()
-                .filter(entry -> !SkipHeaderEnum.contains(entry.getKey()))
-                .forEach(entry -> {putSpan(exchange,"request.headers." + entry.getKey(), String.join(",", entry.getValue()));});
-    }
-    /**
-     * 处理query
-     * @param request
-     */
-    private void processQueryParameters(ServerWebExchange exchange,ServerHttpRequest request) {
-        String queryStr = request.getURI().getQuery();
-        if (StringUtils.isNotEmpty(queryStr)) {
-            putSpan(exchange,"request.queryString", queryStr);
-        }
-    }
     @Override
     public int getOrder() {
         return SpringBeanOrderConstant.GATEWAY_TRACING;
     }
 }
+
+
